objects/Participant_Test_Request__c.object
<CustomObject>
    <label>Participant Test Request</label>
    <nameField>
        <displayFormat>PTR={000000}</displayFormat>
        <label>Participant Test Request Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Participant Test Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Device_ID__c</fullName>
        <label>Device ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Date__c</fullName>
        <label>Test Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Test_Time__c</fullName>
        <label>Test Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locator_ID__c</fullName>
        <label>Locator ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participant__c</fullName>
        <label>Participant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Participant Test Requests</relationshipLabel>
        <relationshipName>Participant_Test_Request_Details</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Testing_Request__c</fullName>
        <label>Testing Request</label>
        <referenceTo>Testing_Request__c</referenceTo>
        <relationshipLabel>Participant Test Request Details</relationshipLabel>
        <relationshipName>Participant_Test_Request_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date_Result_Needed__c</fullName>
        <label>Date Result Needed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Alternate_Name_and_Contact_Info__c</fullName>
        <label>Alternate Name and Contact Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>